trunk/Archive2/c8/f778b9963b4d58/output
main.cpp: In member function 'virtual std::basic_streambuf<char>::int_type textbuf<std::basic_ofstream<char> >::overflow(std::basic_streambuf<char>::int_type)':
main.cpp:35:57: error: 'class std::vector<char>' has no member named 'substr'
                 trail.assign(this->pptr(), this->buffer.substr(pos1, pos2));
                                                         ^
main.cpp:48:5: warning: control reaches end of non-void function [-Wreturn-type]
     }
     ^
